===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 1.3.1 (2005-04-??)
--------------------------

- Synchronize implementation of ``objc.inject`` with mach_* 1.1.
  Now injects on main thread by default, takes third useMainThread
  argument to change this behavior.

- Fixed bug in the NSBundle hack that caused a NULL pointer to be
  dereferenced if looking up a non-existent class using NSBundle API.

- Added ``OC_PythonUnicode`` and ``OC_PythonString`` classes that
  preserve the identity of ``str`` and ``unicode`` objects across
  the bridge.  Additionally, bridge for ``str`` now uses the default
  encoding of ``NSString``, rather than ``sys.getdefaultencoding()``
  from Python.  For Mac OS X, this is typically MacRoman.  The reason
  for this is that not all Python ``str`` instances could cross the
  bridge at all previously.  ``objc.setStrBridgeEnabled(False)`` will
  still trigger warnings, if you are attempting to track down an
  encoding bug.  However, the symptoms of the bug will be incorrectly
  encoded text, not an exception.

- New Xcode project template "PyObjC Mixed Application" that is
  a py2app based Python application that loads an Objective-C
  plug-in built as a separate target.

- Xcode project templates "Cocoa-Python Application" and
  "Cocoa-Python Document-based Application" have been replaced
  with py2app based Xcode templates named "PyObjC Application" and
  "PyObjC Document-based Application" respectively.

- New InjectBrowser example in Inject that demonstrates injection of the
  ClassBrowser example into another application using ``objc.inject``.

- ``NSData`` and ``NSMutableData`` instances now support the Python buffer
  protocol.

- ``NSData`` instances now support a convenience API that allow them to
  act like a ``buffer`` instance for ``str()`` and slicing.

- Objects that support the Python buffer protocol, such as ``buffer`` and